:hammer: fixing the css word wrap shortcut

--- a/app/src/options/css/main.css
+++ b/app/src/options/css/main.css
@@ -64,6 +64,7 @@ body {
 
 #main-content {
     flex: 1;
+    width: 80%;
     padding: 15px;
     background-color: var(--background-color);
     color: var(--text-color);
@@ -203,7 +204,14 @@ button {
     cursor: pointer;
 }
 
-.CodeMirror, .cm-s-dracula {
+.json-editor {
+    width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: left;
+}
+
+.CodeMirror, .cm-s-dracula, .CodeMirror-wrap {
     width: 100%;
     height: 70vh;
     font-family: courier, monospace;
@@ -227,13 +235,6 @@ button {
     width: 80%;
     margin-right: auto;
     margin-left: auto;
-}
-
-.json-editor {
-    width: 80%;
-    margin-right: auto;
-    margin-left: auto;
-    text-align: left;
 }
 
 .error {
